--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install git+git://github.com/bioinformed/vgraph@v1.4.0#egg=vgraph
-      - name: Test with pytest
+      - name: Test
         run: |
+          python -c 'import os; print(os.getcwd())'
           python -m pytest -v test
